# budgie-desktop

./: meson.build
src/abomination/: RunningApp.vala  Workspace.vala  abomination.vala  meson.build
src/daemon/: screenshot.vala
src/panel/applets/: meson.build
src/panel/applets/status/: BluetoothIndicator.vala  StatusApplet.vala
src/wm/: meson.build
